# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\CommentController;
 use App\Http\Controllers\EmailResetController;
+use App\Http\Controllers\PasswordResetController;
 use App\Http\Controllers\PostController;
 use App\Http\Controllers\UserController;
 use Illuminate\Support\Facades\Route;
@@ -37,6 +38,9 @@ Route::middleware(['auth:sanctum', 'verified'])->group(function () {
     Route::controller(EmailResetController::class)->group(function () {
         Route::post('/email-resets/send-reset-link', 'store');
         Route::put('/email-resets/{token}', 'update');
+    });
+    Route::controller(PasswordResetController::class)->group(function () {
+        Route::put('/password-resets', 'update');
     });
     Route::controller(PostController::class)->group(function () {
         Route::post('/posts', 'store');
